@@ -1,6 +1,7 @@
 6.5:
 ----
 
+Added roughly correct masses for different payloads.
 Added Apollo 13 O2 tank quantity sensor failure.
 Added support for post-splashdown audio (e.g. Presidential congratulations).
 Fixed compiler warning in saturn1b.cpp.
